<resources>
    <string name="app_name">LED Clock</string>

    <string name="main_starting">Starting bluetooth adapter</string>
    <string name="main_start_discovery">Searching bluetooth devices</string>
    <string name="main_stop_discover">Press icon to start searching</string>
    <string name="main_connecting">Connecting to LED Clock</string>
    <string name="main_fetch_settings">Fetching current settings</string>
    <string name="settings_option_connect">Connect</string>
    <string name="settings_option_dark_mode">Dark mode</string>

    <string name="settings_title">LED Clock settings</string>
    <string name="settings_option_disconnect">Disconnect</string>
    <string name="settings_network_title">Network</string>
    <string name="settings_network_wifi">Wifi credentials</string>
    <string name="settings_time_title">Time</string>
    <string name="settings_time_ntp">NTP server</string>
    <string name="settings_time_geolocation">Geolocation</string>
    <string name="settings_time_refresh">Refresh rate</string>
    <string name="settings_light_title">Light</string>
    <string name="settings_light_colors">Colors</string>
    <string name="settings_light_brightness">Brightness</string>
    <string name="settings_save_reboot">SAVE and REBOOT</string>
    <string name="settings_dialog_title">Save and reboot device?</string>
    <string name="settings_dialog_message">Changes have been made to the device settings. Press yes to save the settings and reboot the device. Press no to discard settings and reboot the device.</string>
    <string name="settings_dialog_positive">YES</string>
    <string name="settings_dialog_negative">NO</string>

    <string name="wifi_settings_title">Wifi credentials</string>
    <string name="wifi_settings_ssid_title">SSID</string>
    <string name="wifi_settings_ssid_description">Enter name of wifi network.</string>
    <string name="wifi_settings_ssid_value" />
    <string name="wifi_settings_password_title">Password</string>
    <string name="wifi_settings_password_description">Enter password of wifi network.</string>
    <string name="wifi_settings_password_value" />

    <string name="ntp_settings_title">NTP server</string>
    <string name="ntp_settings_server_title">NTP server</string>
    <string name="ntp_settings_server_description">Enter url of ntp server.</string>
    <string name="ntp_settings_server_value" />
    <string name="ntp_settings_gmt_title">GMT offset (min)</string>
    <string name="ntp_settings_gmt_description">Enter gmt offset for your location (minutes).</string>
    <string name="ntp_settings_gmt_value" />
    <string name="ntp_settings_daylight_title">Daylight saving time (min)</string>
    <string name="ntp_settings_daylight_description">Enter daylight saving time for your location (minutes).</string>
    <string name="ntp_settings_daylight_value" />

    <string name="location_settings_title">Geolocation</string>
    <string name="location_settings_longitude_title">Longitude</string>
    <string name="location_settings_longitude_description">Enter longitude of your current location (used to fetch sunrise and sunset times).</string>
    <string name="location_settings_longitude_value" />
    <string name="location_settings_latitude_title">Latitude</string>
    <string name="location_settings_latitude_description">Enter latitude of your current location (used to fetch sunrise and sunset times).</string>
    <string name="location_settings_latitude_value" />

    <string name="refresh_settings_title">Refresh rate</string>
    <string name="refresh_settings_rate_title">Refresh rate (ms)</string>
    <string name="refresh_settings_rate_description">Enter refresh rate for time display (in ms).</string>
    <string name="refresh_settings_rate_value" />

    <string name="colors_settings_title">Colors</string>
    <string name="colors_settings_hours_title">Hours color (hex)</string>
    <string name="colors_settings_hours_description">Set color for hour digits.</string>
    <string name="colors_settings_hours_value" />
    <string name="colors_settings_minutes_title">Minutes color (hex)</string>
    <string name="colors_settings_minutes_description">Set color for minutes digits.</string>
    <string name="colors_settings_minutes_value" />

    <string name="brightness_settings_title">Brightness</string>
    <string name="brightness_settings_day_title">Brightness day (%)</string>
    <string name="brightness_settings_day_description">Set brightness percentage for leds during day.</string>
    <string name="brightness_settings_day_value" />
    <string name="brightness_settings_night_title">Brightness night (%)</string>
    <string name="brightness_settings_night_description">Set brightness percentage for leds during night.</string>
    <string name="brightness_settings_night_value" />

    <string name="edit_activity_color_title">Pick color</string>
    <string name="edit_activity_double_title">Enter number</string>
    <string name="edit_activity_int_title">Enter number</string>
    <string name="edit_activity_password_title">Enter password</string>
    <string name="edit_activity_percentage_title">Pick percentage</string>
    <string name="edit_activity_string_title">Enter text</string>
    <string name="edit_activity_save">SAVE</string>
    <string name="edit_activity_description" />
    <string name="edit_activity_value" />

</resources>