<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsBrightnessActivity">

    <ImageButton
        android:id="@+id/BrightnessBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:tint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_24px" />

    <TextView
        android:id="@+id/BrightnessTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/brightness_settings_title"
        android:textColor="@color/gray"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/BrightnessDayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/BrightnessTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BrightnessTitleText">

        <TextView
            android:id="@+id/BrightnessDayTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/brightness_settings_day_title"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/BrightnessDayDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/brightness_settings_day_description"
            android:textColor="@color/lightest_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BrightnessNightLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/BrightnessTitleText"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BrightnessDayLayout">

        <TextView
            android:id="@+id/BrightnessNightTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/brightness_settings_night_title"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/BrightnessNightDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/brightness_settings_night_description"
            android:textColor="@color/lightest_gray" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>