<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.settings.SettingsWifiActivity">

    <ImageButton
        android:id="@+id/WifiBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:tint="?colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_24px" />

    <TextView
        android:id="@+id/WifiTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/wifi_settings_title"
        android:textColor="?colorOnBackground"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/WifiSsidLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/WifiTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WifiTitleText">

        <TextView
            android:id="@+id/WifiSsidTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/wifi_settings_ssid_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/WifiSsidValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/wifi_settings_ssid_value"
            android:textColor="?android:textColorSecondary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/WifiPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/WifiTitleText"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WifiSsidLayout">

        <TextView
            android:id="@+id/WifiPasswordTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/wifi_settings_password_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/WifiPasswordValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/wifi_settings_password_value"
            android:textColor="?android:textColorSecondary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>