<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.settings.SettingsLocationActivity">

    <ImageButton
        android:id="@+id/LocationBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:tint="?colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_24px" />

    <TextView
        android:id="@+id/LocationTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/location_settings_title"
        android:textColor="?colorOnBackground"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LocationLongitudeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/LocationTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LocationTitleText">

        <TextView
            android:id="@+id/LocationLongitudeTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/location_settings_longitude_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/LocationLongitudeValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/location_settings_longitude_value"
            android:textColor="?android:textColorSecondary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LocationLatitudeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/LocationTitleText"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LocationLongitudeLayout">

        <TextView
            android:id="@+id/LocationLatitudeTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/location_settings_latitude_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/LocationLatitudeValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/location_settings_latitude_value"
            android:textColor="?android:textColorSecondary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>