<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsRefreshActivity">

    <ImageButton
        android:id="@+id/RefreshBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:tint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_24px" />

    <TextView
        android:id="@+id/RefreshTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/refresh_settings_title"
        android:textColor="@color/gray"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/RefreshRateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/RefreshTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RefreshTitleText">

        <TextView
            android:id="@+id/RefreshRateTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/refresh_settings_rate_title"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/RefreshRateDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/refresh_settings_rate_description"
            android:textColor="@color/lightest_gray" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>